--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 
   <body>
     <!-- TODO: Say something interesting in the heading tag... -->
-    <h1>...</h1>
+    <h1>Hello World</h1>
 
     <div class="purple">
       <span>This text should be purple</span>
-    </div>
-
+  </div>
+  
+  <div class = "animal">
     <button>Show me some animal trivia!</button>
+  </div>
 
     <div id="results-area"></div>
     <div id="question-display"></div>
